--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -93,7 +93,7 @@
 		\item Describe the historical roots of AI
 		\item Elemental AI terminology
 		\item Introduce some AI applications
-		\IfStrEq{\modo}{MASTER-ESPACIO}{
+		\IfStrEq{\modo}{mucyte}{
 			\item Applications of AI in space
 		}{}
 		\end{enumerate}
@@ -927,7 +927,7 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 \end{frame}
 
 
-\IfStrEq{\modo}{MASTER-ESPACIO}{
+\IfStrEq{\modo}{mcyte}{
 	\section{AI in space}
 	\subsection{Why is Mars interesting?}
 	\begin{frame}{AI in space}{Why is Mars interesting? (I)}
