--- a/mlfoundations/mlfoundations.tex
+++ b/mlfoundations/mlfoundations.tex
@@ -1348,4 +1348,69 @@ else
     \end{columns}
 \end{frame}
 
+\subsection{NASA JPL BioSleeve}
+\begin{frame}{Case studies}{Case study 6: NASA JPL BioSleeve}
+    \begin{columns}
+ 	   \column{.50\textwidth}
+	   \small{
+		Client
+		\begin{itemize}
+			\item NASA JPL Advanced Robotics Group
+		\end{itemize}
+		Business problem
+		\begin{itemize}
+			\item Recognize hand gestures
+            \item \href{https://spectrum.ieee.org/automaton/robotics/robotics-hardware/jpl-biosleeve-enables-precise-robot-control-through-hand-and-arm-gestures}{(More info)}
+		\end{itemize}
+		Data
+		\begin{itemize}
+			\item None
+		\end{itemize}
+		Propose a solution to:
+		\begin{itemize}
+            \item Data adquisition
+			\item ML task
+			\item Model maintenance
+		\end{itemize}
+		}
+ 	   \column{.50\textwidth}
+			\includegraphics[width=\linewidth]{figs/biosleeve.jpeg}
+
+			\tiny \centering \href{https://dces.essex.ac.uk/staff/hhu/Papers/CTS2013-San\%20Diego.pdf}{(Source)}
+
+            \normalsize \href{XXX}{(Paper)}
+    \end{columns}
+\end{frame}
+
+\subsection{UAV terrain classification}
+\begin{frame}{Case studies}{Case study 6: UAV terrain classification}
+    \begin{columns}
+ 	   \column{.50\textwidth}
+	   \small{
+		Client
+		\begin{itemize}
+			\item NASA JPL Advanced Robotics Group
+		\end{itemize}
+		Business problem
+		\begin{itemize}
+			\item Recognize terrain type
+            \item Automatic UAV landing
+		\end{itemize}
+		Data
+		\begin{itemize}
+			\item UAV down-looking camera
+		\end{itemize}
+		Propose a solution to:
+		\begin{itemize}
+            \item Feature extraction
+		\end{itemize}
+
+ 	   \column{.50\textwidth}
+			\includegraphics[width=\linewidth]{figs/biosleeve.jpeg}
+
+			\tiny \centering \href{https://dces.essex.ac.uk/staff/hhu/Papers/CTS2013-San%20Diego.pdf}{(Source)}
+
+    \end{columns}
+\end{frame}
+
 \end{document}
