NASA-JPL Machine Learning study cases added

--- a/mlfoundations/mlfoundations.tex
+++ b/mlfoundations/mlfoundations.tex
@@ -1352,7 +1352,7 @@ else
 \subsection{NASA JPL BioSleeve}
 \begin{frame}{Case studies}{Case study 6: NASA JPL BioSleeve}
     \begin{columns}
- 	   \column{.50\textwidth}
+	   \column{.50\textwidth}
 	   \small{
 		Client
 		\begin{itemize}
@@ -1360,8 +1360,7 @@ else
 		\end{itemize}
 		Business problem
 		\begin{itemize}
-			\item Recognize hand gestures
-            \item \href{https://spectrum.ieee.org/automaton/robotics/robotics-hardware/jpl-biosleeve-enables-precise-robot-control-through-hand-and-arm-gestures}{(More info)}
+			\item Recognize hand gestures \href{https://spectrum.ieee.org/automaton/robotics/robotics-hardware/jpl-biosleeve-enables-precise-robot-control-through-hand-and-arm-gestures}{(more info)}
 		\end{itemize}
 		Data
 		\begin{itemize}
@@ -1371,47 +1370,42 @@ else
 		\begin{itemize}
             \item Data adquisition
 			\item ML task
-			\item Model maintenance
 		\end{itemize}
+     	\href{https://www.semanticscholar.org/paper/JPL-BioSleeve-for-gesture-based-control\%3A-Technology-Assad-Wolf/18152a964e128e247a706dc8729036369b536b48/figure/2}{(Solution)}
 		}
- 	   \column{.50\textwidth}
-			\includegraphics[width=\linewidth]{figs/biosleeve.jpeg}
 
+ 	   \column{.50\textwidth}
+			\includegraphics[width=\linewidth]{figs/biosleeve.jpeg}\\
 			\tiny \centering \href{https://dces.essex.ac.uk/staff/hhu/Papers/CTS2013-San\%20Diego.pdf}{(Source)}
 
-            \normalsize \href{XXX}{(Paper)}
+			\includegraphics[width=0.5\linewidth]{figs/biosleeve2.jpg}\\
+			\tiny \centering \href{https://www-robotics.jpl.nasa.gov/tasks/showBrowseImage.cfm?TaskID=277&tdaID=700081}{(Source)}
     \end{columns}
+    \normalsize \href{https://dl.acm.org/citation.cfm?id=2447571}{Wolf, Michael T., et al. \textit{Decoding static and dynamic arm and hand gestures from the JPL BioSleeve}. IEEE Aerospace Conference. IEEE, 2013.}
 \end{frame}
 
 \subsection{UAV terrain classification}
-\begin{frame}{Case studies}{Case study 6: UAV terrain classification}
-    \begin{columns}
- 	   \column{.50\textwidth}
-	   \small{
+\begin{frame}{Case studies}{Case study 7: UAV terrain classification}
 		Client
 		\begin{itemize}
 			\item NASA JPL Advanced Robotics Group
 		\end{itemize}
 		Business problem
 		\begin{itemize}
-			\item Recognize terrain type
-            \item Automatic UAV landing
+			\item Recognize terrain type for automatic UAV landing
+			\item \href{https://www.youtube.com/watch?v=ovtpwxiIr_8}{(Video)}
 		\end{itemize}
 		Data
 		\begin{itemize}
 			\item UAV down-looking camera
+			\item No dataset available
 		\end{itemize}
 		Propose a solution to:
 		\begin{itemize}
+			\item Data adquisition
+			\item ML task
             \item Feature extraction
 		\end{itemize}
-
- 	   \column{.50\textwidth}
-			\includegraphics[width=\linewidth]{figs/biosleeve.jpeg}
-
-			\tiny \centering \href{https://dces.essex.ac.uk/staff/hhu/Papers/CTS2013-San%20Diego.pdf}{(Source)}
-
-    \end{columns}
 \end{frame}
 
 \end{document}
