NASA-JPL Machine Learning study cases added

--- a/mlfoundations/mlfoundations.tex
+++ b/mlfoundations/mlfoundations.tex
@@ -1351,6 +1351,7 @@ else
 
 \subsection{NASA JPL BioSleeve}
 \begin{frame}{Case studies}{Case study 6: NASA JPL BioSleeve}
+	\vspace{-0.5cm}
     \begin{columns}
 	   \column{.50\textwidth}
 	   \small{
@@ -1371,7 +1372,6 @@ else
             \item Data adquisition
 			\item ML task
 		\end{itemize}
-     	\href{https://www.semanticscholar.org/paper/JPL-BioSleeve-for-gesture-based-control\%3A-Technology-Assad-Wolf/18152a964e128e247a706dc8729036369b536b48/figure/2}{(Solution)}
 		}
 
  	   \column{.50\textwidth}
@@ -1381,7 +1381,12 @@ else
 			\includegraphics[width=0.5\linewidth]{figs/biosleeve2.jpg}\\
 			\tiny \centering \href{https://www-robotics.jpl.nasa.gov/tasks/showBrowseImage.cfm?TaskID=277&tdaID=700081}{(Source)}
     \end{columns}
-    \normalsize \href{https://dl.acm.org/citation.cfm?id=2447571}{Wolf, Michael T., et al. \textit{Decoding static and dynamic arm and hand gestures from the JPL BioSleeve}. IEEE Aerospace Conference. IEEE, 2013.}
+
+    \normalsize \href{https://dl.acm.org/citation.cfm?id=2447571}{Wolf, Michael T., et al. \textit{Decoding static and dynamic arm and hand gestures from the JPL BioSleeve}. IEEE Aerospace Conference. IEEE, 2013.}\\
+
+	\vspace{0.3cm}
+
+    \centering \href{https://www.semanticscholar.org/paper/JPL-BioSleeve-for-gesture-based-control\%3A-Technology-Assad-Wolf/18152a964e128e247a706dc8729036369b536b48/figure/2}{(Solution)} \href{https://www.youtube.com/watch?v=BGfDyqAE86U}{(Results)}
 \end{frame}
 
 \subsection{UAV terrain classification}
