--- a/ann/figs/neuron-alternative.tex
+++ b/ann/figs/neuron-alternative.tex
@@ -8,18 +8,18 @@
   },
   squa/.style={
     draw,
-    inner sep=2pt,
+    inner sep=6pt,
     font=\Large,
     join = by -latex
   },
 	start chain=2,node distance=13mm]
   	\node[on chain=2] 
-		  (x2) {$a_2$};
+		  (x2) {$a_1$};
 	\node[on chain=2,join=by o-latex] 
-		  {$w_2$};
+		  {$w_1$};
   	\node[on chain=2,init] (sigma) 
 		  {$\displaystyle\Sigma$};
-	\node[on chain=2,squa,label=above:{\parbox{2cm}{\centering Activate \\ function}}]   
+	\node[on chain=2,squa,label=above:{\parbox{2cm}{\centering Activation \\ function}}]   
 		  {$g$};
   	\node[on chain=2,label=above:Output,join=by -latex] 
 		  {$y$};
@@ -31,9 +31,9 @@
 	\end{scope}
 	\begin{scope}[start chain=3]
 		\node[on chain=3] at (0,-1.5cm) 
-		  (x3) {$a_3$};
+		  (x3) {$a_2$};
 	  	\node[on chain=3,join=by o-latex] 
-	   	  (w3) {$w_3$};
+	   	  (w3) {$w_2$};
 	\end{scope}
 %	\node[label=above:\parbox{2cm}{\centering Bias \\ $w_{0}$}] at (sigma|-w1) (b) {};
 
